--- a/client/index.html
+++ b/client/index.html
@@ -3,56 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="tank,html5,canvas,ai">
-    <title>Battle City AI</title>
+    <title>tank90 online</title>
     <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-    <script type="text/javascript">window.onload = function(){main()}</script>
-</head>
-<body >
-    <div class="container">
-    <div id = "srcImg">
-        <img src="img/tankAll.gif" id = "tankAll"/>
-    </div>
 
-    <div id="game">
-        <canvas id="wall" width="512" height="448"></canvas>
-        <canvas id="main" width="512" height="448"></canvas>
-        <canvas id="grass" width="512" height="448"></canvas>
-        <canvas id="upp" width="512" height="448"></canvas>
-        <canvas id="stage" width="512" height="448"></canvas>
-    </div>
-
-    <div id = "header">
-        <h1>Battle City AI</h1>
-    </div>
-    <ul id = "player1">
-        主机Player1
-        <li>方向: ↑↓→←</li>
-        <li>开火:空格/回车</li>
-    </ul>
-    <ul id = "player2">
-        副机Player2
-        <li>方向: w s a d</li>
-        <li>开火: j f</li>
-    </ul>
-    <ul id="author">
-        <li>游戏制作: <a href="http://weibo.com/06wj">06wj</a></li>
-        <li>游戏AI: <a href="http://weibo.com/rubyshoes">Jules.Wang</a></li>
-        <li>游戏Debug: <a href="http://www.victorfang.com">Victor Fang</a></li>
-            <br>
-        <div id="cheat">攻略秘笈:
-        <li>游戏中按下P，暂停／继续</li>
-        <li>在开始菜单按下9，开局9条命</li>
-        <li>游戏中按下1，随机出现宝物</li>
-        <li>游戏中按下2，跳关</li>
-        <li>游戏中按下0，切换高难度模式</li>
-        </div>
-    </ul>
-
-    <div id="fast-mode"></div>
-    </div>
-    <canvas id="astar" width="512" height="448"></canvas>
-    </div>
-    <script type="text/javascript" src = "js/Const.js"></script>
+	<script type="text/javascript" src = "js/socket.js"></script>
+	<script type="text/javascript" src = "js/Const.js"></script>
     <script type="text/javascript" src = "js/Sound.js"></script>
     <script type="text/javascript" src = "js/Map.js"></script>
     <script type="text/javascript" src = "js/MapLevel.js"></script>
@@ -72,6 +27,40 @@
     <script type="text/javascript" src = "js/Main.js"></script>
     <script type="text/javascript" src = "js/BinaryHeap.js"></script>
     <script type="text/javascript" src = "js/AI.js"></script>
+	
+    <script type="text/javascript">
+		var server_addr = prompt("请输入服务器地址:","ws://120.79.91.100:9999/");
+		var nick_name = prompt("请输入昵称:","无名氏");
+		window.onload = function(){main()}
+	</script>
+</head>
+<body >
+    <div class="container">
+    <div id = "srcImg">
+        <img src="img/tankAll.gif" id = "tankAll"/>
+    </div>
+	
+    <div id="game">
+        <canvas id="wall" width="512" height="448"></canvas>
+        <canvas id="main" width="512" height="448"></canvas>
+        <canvas id="grass" width="512" height="448"></canvas>
+        <canvas id="upp" width="512" height="448"></canvas>
+        <canvas id="stage" width="512" height="448"></canvas>
+    </div>
+
+    <div id = "header">
+        <h1>Tank90 online</h1>
+    </div>
+	
+    <ul id = "player1">
+        <li>方向: w s a d</li>
+        <li>开火: j f</li>
+    </ul>
+    <div id="fast-mode"></div>
+    </div>
+    <canvas id="astar" width="512" height="448"></canvas>
+    </div>
+
 
     <audio id="attack" src="sound/attack.mp3"></audio>
     <audio id="bomb0" src="sound/bomb0.mp3"></audio>
