--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,17 @@
 
 	<script type="text/javascript" src = "js/socket.js"></script>
 	<script type="text/javascript" src = "js/Const.js"></script>
+	<!--主菜单场景-->
+	<script type="text/javascript" src = "js/MenuScene/TankSelector.js"></script>
+	<script type="text/javascript" src = "js/MenuScene/MenuSceneBg.js"></script>
+	<script type="text/javascript" src = "js/MenuScene/MenuScene.js"></script>
+	<!--游戏场景-->
+	<script type="text/javascript" src = "js/GameScene/StageStart.js"></script>
+	<script type="text/javascript" src = "js/GameScene/GameScene.js"></script>
+
+	<script type="text/javascript" src = "js/GameStart.js"></script>
+	<script type="text/javascript" src = "js/GameOver.js"></script>
+	<script type="text/javascript" src = "js/SceneMgr.js"></script>
     <script type="text/javascript" src = "js/Sound.js"></script>
     <script type="text/javascript" src = "js/Map.js"></script>
     <script type="text/javascript" src = "js/MapLevel.js"></script>
@@ -49,7 +60,7 @@
     </div>
 
     <div id = "header">
-        <h1>Tank90 online</h1>
+         <h1>Tank90 online</h1>
     </div>
 	
     <ul id = "player1">
@@ -60,7 +71,6 @@
     </div>
     <canvas id="astar" width="512" height="448"></canvas>
     </div>
-
 
     <audio id="attack" src="sound/attack.mp3"></audio>
     <audio id="bomb0" src="sound/bomb0.mp3"></audio>
